services/base/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-idea-service
spec:
  type: ClusterIP
  selector:
      app: ci-idea-api
  ports:
  - name: http
    port: 8080
